feat: add earnings controller and routes
